--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,6 +129,7 @@ ul {
     position: relative;
     overflow: hidden;
     #header {
+      background: #fff;
       position: absolute;
       top: 0;
       left: 0;
